filter is deleted to false